<resources>
    <string name="app_name" translatable="false">MCinaBox</string>
    <string name="app_version" translatable="false">v0.1.4-p5</string>
    <string name="app_about_dependent_info" translatable="false">BoatApp (CosineMath,MIT)\nGson (Google,Apache-2.0)\nJNDCrash (ivanarh,Apache-2.0)\nXZ for Java (Lasse Collin,Public Domain)\nGL4ES (ptitSeb,MIT)\nOpenAL Soft (kcat,GPL-2.0)\nFileDownloader (lingochamp,Apache-2.0)\nBubbleLayout (MasayukiSuda,MIT)\nAndroidRocker (kongqw,all)\ncolorpicker (QuadFlask,Apache-2.0)</string>
    <string name="app_about_copyright_info" translatable="false">MCinaBox Copyright © 2020 longjunyu.</string>
    <string name="app_about_developer_info" translatable="false">AOF-Dev (MCinaBox ljy122@qq.com)\nAnd all the project contributors</string>
    <string name="title_downloader_selected_versionid" translatable="false">_._._</string>
    <string name="title_point_up" translatable="false">↑</string>
    <string name="title_point_right" translatable="false">→</string>
    <string name="title_point_left" translatable="false">←</string>
    <string name="title_point_down" translatable="false">↓</string>
    <string name="app_about_mcinabox">MCinaBox Minecraft Launcher is a free and open source Minecraft launcher that allows players to install, manage, and play Minecraft Java Edition on Android devices conveniently and quickly. For launcher updates, please refer to the release page of the project’s GitHub page.\nWhen you use this software, it means that you have read and agree to the copyright information of this software, and that you are willing to comply The open source agreement of this software. \nThis software is still in the testing stage. If you have any questions, please send feedback to Github.</string>
    <string name="app_about_copyright">Copyrights</string>
    <string name="app_about_developer">Developers</string>
    <string name="app_about_contributor">Contributors</string>
    <string name="app_about_thanks">Thanks</string>
    <string name="app_about_dependent">Dependents</string>
    <string name="app_about_details">Disclaimer</string>
    <string name="app_about_opensource">Open Source</string>
    <string name="app_about_thanks_info">CosineMath (BoatApp, https://github.com/CosineMath/) Launcher backend support\nbangbang93 (BMCLAPI, http://bmclapi2.bangbang93.com/) Chinese domestic high-speed download source support\nApp icon provider snajdovski\nThe cooperation and efforts of all members of the AOF software development team(AOF-Dev, https://github.com/AOF-Dev)\nAll contributors who participated in this project through Issues, Pull Requests, etc.</string>
    <string name="app_about_details_info">The copyright of Minecraft belongs to Mojang AB. The software producer is not responsible for copyright issues arising from the use of this software. Please support genuinely.</string>
    <string name="app_about_opensource_info">https://github.com/longjunyu2/MCinaBox\n(Follow GPLv3 License Distribution)</string>
    <string name="app_about_pages">Pages</string>
    <string name="app_about_pages_info" translatable="false">https://mcinabox.top (By 旁白)\nhttps://mcinabox.fredward.xyz (By friendlyfredward)</string>
    <string name="app_about_donation">Donation</string>
    <string name="app_about_donation_info">BMCLAPI provides a high-speed minecraft download source. It is a public welfare project. If you want to support the operation of the project, you can donate it through the following website.\nhttps://afdian.net/@bangbang93</string>
    <string name="title_all">All</string>
    <string name="title_in_game">In-game</string>
    <string name="title_out_game">Out-game</string>
    <string name="title_language">Language</string>
    <string name="title_restore">Restore</string>
    <string name="title_game_list">Game List</string>
    <string name="title_game_dir">Game Menu</string>
    <string name="title_launcher_setting">Launcher Settings</string>
    <string name="title_keyboard_setting">Virtual Keyboard Settings</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_plugin">Plug-in</string>
    <string name="title_add_plugin">Add Plug-in</string>
    <string name="title_show">show</string>
    <string name="title_launcher_private_path">App directory</string>
    <string name="title_launcher_public_path">External directory</string>
    <string name="title_setting_basic">Basic Settings</string>
    <string name="title_keyboard_layout">Keyboard Layout</string>
    <string name="title_max_memory">Maximum Memory (MB)</string>
    <string name="title_hardware_memory">Physical Memory size:</string>
    <string name="title_profession_setting">Advanced Settings</string>
    <string name="title_not_check_jvm_platform">Don\'t check the compatibility of the JVM architecture!</string>
    <string name="title_not_check_minecraft">Don\'t check the integrity of Minecraft</string>
    <string name="title_missing_authlib">Missing authlib-injector</string>
    <string name="title_not_check_tipper">Don\'t check the message manager</string>
    <string name="title_not_check_forge_config">Don\'t check Forge configuration</string>
    <string name="title_not_check_options_txt">Don\'t check options.txt</string>
    <string name="title_select_runtime_manifest_by_user">Always manually select runtime library by the user</string>
    <string name="title_enable_debug">Enable debugging</string>
    <string name="title_backspace">Back</string>
    <string name="title_refresh">Refresh</string>
    <string name="title_download">Download</string>
    <string name="title_selected_version">Selected Version: </string>
    <string name="title_version_stable">Stable Version</string>
    <string name="title_version_snapshot">Snapshot Version</string>
    <string name="title_version_old">Old Version</string>
    <string name="title_install_new_version">Install new version</string>
    <string name="title_install_game_pack">Install game pack</string>
    <string name="title_game_global_setting">Global Game Settings</string>
    <string name="title_create_new_user">Add new User</string>
    <string name="title_launcher">Launcher</string>
    <string name="title_game">Game</string>
    <string name="title_account">Account</string>
    <string name="title_user">User</string>
    <string name="title_manager">Management</string>
    <string name="title_select_version">Select Version</string>
    <string name="title_launch_game">Launch</string>
    <string name="title_download_source">Minecraft Download Source</string>
    <string name="title_import_runtime">Import Runtime</string>
    <string name="title_import">Import</string>
    <string name="title_about_launcher">About MCinaBox</string>
    <string name="title_total_process">Total progress</string>
    <string name="title_current_task">Current task</string>
    <string name="title_current_version">Current version</string>
    <string name="title_user_name">Username</string>
    <string name="title_password">Password</string>
    <string name="title_online">Genuine Login</string>
    <string name="title_external">External Login</string>
    <string name="title_filename">Filename</string>
    <string name="title_output">Export</string>
    <string name="title_ok">Ok</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_step">Operation</string>
    <string name="title_addone">Attach</string>
    <string name="title_version">version</string>
    <string name="title_offline">Offline mode</string>
    <string name="title_unknown">unknown</string>
    <string name="title_warn">Warning</string>
    <string name="title_continue">Continue</string>
    <string name="title_function">Features</string>
    <string name="title_theme">Theme</string>
    <string name="title_name">Name</string>
    <string name="title_location">Position</string>
    <string name="title_size">size</string>
    <string name="title_width">Width</string>
    <string name="title_height">Height</string>
    <string name="title_color">Color</string>
    <string name="title_keep">Keep</string>
    <string name="title_combine">Combine</string>
    <string name="title_corner">Corner</string>
    <string name="title_hide">Hide</string>
    <string name="title_revision">Modify</string>
    <string name="title_edit">Edit</string>
    <string name="title_forge_installer">Forge Installer</string>
    <string name="title_install">Installation</string>
    <string name="title_error">Error</string>
    <string name="title_over_write">Overwrite</string>
    <string name="title_delete">Delete</string>
    <string name="title_note">Prompt</string>
    <string name="title_enable">Enable</string>
    <string name="title_disable">Disable</string>
    <string name="title_fail">Failure</string>
    <string name="title_success">Success</string>
    <string name="title_world_name">World Name</string>
    <string name="title_edit_date">Modified date</string>
    <string name="title_download_speed">Download speed</string>
    <string name="title_virtual_controller">Virtual controller</string>
    <string name="title_global_setting">Global Settings</string>
    <string name="title_custom_keyboard">Custom Keyboard</string>
    <string name="title_pc_keyboard">PC Keyboard</string>
    <string name="title_pc_mouse">PC Mouse</string>
    <string name="title_pe_keyboard">MCPE Keyboard</string>
    <string name="title_pe_itembar">MCPE Item Bar</string>
    <string name="title_pe_joystick">MCPE Joystick</string>
    <string name="title_touchpad">Touchpad</string>
    <string name="title_inputbox">Input Box</string>
    <string name="title_inputbox_config">Input Box Settings</string>
    <string name="title_alpha_size">Transperancy</string>
    <string name="title_move">Move</string>
    <string name="title_itembar_config">MCPE Item Bar Settings</string>
    <string name="title_pe_keyboard_config">MCPE Keyboard Settings</string>
    <string name="title_button_bounce">Jump Key</string>
    <string name="title_pe_joystick_config">MCPE Joystick Settings</string>
    <string name="title_pc_keyboard_config">PC Keyboard Settings</string>
    <string name="title_pc_mouse_config">PC Mouse Settings</string>
    <string name="title_mouse_wheel_speed">Wheel Speed</string>
    <string name="title_screen_touchpad_config">Screen Touchpad Settings</string>
    <string name="title_custom_keyboard_config">Custom Keyboard Settings</string>
    <string name="title_button_config">Key Settings</string>
    <string name="title_sensitivity">Sensitivity</string>
    <string name="title_trigger">Trigger</string>
    <string name="title_mode">Mode</string>
    <string name="title_point">Point</string>
    <string name="title_slide_touch">Slide</string>
    <string name="title_clear">Empty</string>
    <string name="title_mouse_lb">Left Button</string>
    <string name="title_mouse_rb">Right Button</string>
    <string name="title_mouse_cb">Middle Button</string>
    <string name="title_wheel_up">Wheel Up</string>
    <string name="title_wheel_down">Wheel Down</string>
    <string name="title_server">Server</string>
    <string name="title_online_login">Online login</string>
    <string name="tips_user_namehint">Username or email</string>
    <string name="tips_please_enter_password">Please enter your password</string>
    <string name="tips_itembar_warn">*Note: The inventory is only visible in the game</string>
    <string name="tips_stand_keyboard_buttons">Standard keyboard keys</string>
    <string name="tips_stand_mouse_button">Standard Mouse button</string>
    <string name="tips_selected">Selected：</string>
    <string name="tips_please_enter_server">The default is the official Mojang server</string>
    <string name="title_enter" translatable="false">Enter</string>
    <string name="title_t_enter" translatable="false">T + Enter</string>
    <string name="title_done" translatable="false">Done</string>
</resources>