<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog_noalpha">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_title_main"
            android:textSize="@dimen/text_mid"
            android:text="@string/title_create_new_user"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginEnd="5dp"
            android:background="@android:color/background_dark" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="@color/text_title_main"
                android:textSize="@dimen/text_mid"
                android:text="@string/title_user_name"/>
            <EditText
                android:id="@+id/dialog_edittext_input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/text_mid"
                android:hint="@string/tips_user_namehint"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_linearlayout_input_userpasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="@color/text_title_main"
                android:textSize="@dimen/text_mid"
                android:text="@string/title_password"/>
            <EditText
                android:id="@+id/dialog_edittext_input_userpasswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/text_mid"
                android:hint="@string/tips_please_enter_password"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_linearlayout_input_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="@color/text_title_main"
                android:textSize="@dimen/text_mid"
                android:text="@string/title_server"/>
            <EditText
                android:id="@+id/dialog_edittext_input_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/text_mid"
                android:hint="@string/tips_please_enter_server"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/text_title_main"
                android:textSize="@dimen/text_mid"
                android:text="@string/title_online_login"/>
            <CheckBox
                android:id="@+id/dialog_checkbox_online_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/dialog_button_confirm_createuser"
                android:layout_marginStart="10dp"
                style="@style/LauncherButton_1"
                android:text="@string/title_ok"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/dialog_button_cancle_createuser"
                android:layout_marginEnd="10dp"
                style="@style/LauncherButton_1"
                android:text="@string/title_cancel"/>
        </LinearLayout>



    </LinearLayout>

</LinearLayout>