<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <EditText
        android:id="@+id/dialog_input_edit_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="text"
        android:imeOptions="flagNoExtractUi|actionNone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/dialog_input_button_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_done"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/dialog_input_button_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_enter"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/dialog_input_button_t_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_t_enter"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/dialog_input_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cancel"
            android:textAllCaps="false"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>
    
</LinearLayout>